--- a/Veja_Agora.html
+++ b/Veja_Agora.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta property="og:image:secure_url" itemprop="image" content="https://images5.alphacoders.com/122/1221908.jpg">
     <title>Quem está de olho em você?</title>
     <style>
         #display{
