--- a/Veja_Agora.html
+++ b/Veja_Agora.html
@@ -143,7 +143,10 @@
 <body id="body">
 <div id="tela">
     <div class="fechar" onclick="fechar()">X</div>
-    <img src="btnCo.png" class="BtnStyle" onclick="share()">
+    
+    <a href="https://www.facebook.com/sharer/sharer.php?u=https://ayltoninacio.com.br/blog/imagens-responsivas-dinamicas-com-sizes-e-srcset">
+        <img src="btnCo.png" class="BtnStyle">
+    </a>
     <div id="popup">
         <div id="img"></div>
         <h3 id="h3">ninguem interessado</h3>
