--- a/Veja_Agora.html
+++ b/Veja_Agora.html
@@ -144,7 +144,7 @@
 <div id="tela">
     <div class="fechar" onclick="fechar()">X</div>
     
-    <a href="https://www.facebook.com/sharer/sharer.php?u=https://ayltoninacio.com.br/blog/imagens-responsivas-dinamicas-com-sizes-e-srcset">
+    <a href="https://api.whatsapp.com/send?text= https://dsgils.github.io/brincando/Veja_Agora.html">
         <img src="btnCo.png" class="BtnStyle">
     </a>
     <div id="popup">
