--- a/Veja_Agora.html
+++ b/Veja_Agora.html
@@ -166,7 +166,7 @@
 <div id="tela">
     <div class="fechar" onclick="fechar()">X</div>
     
-    <a href="https://api.whatsapp.com/send?text="  onclick="location.href=this.href+' '+'Resultado do teste, quem está de olho em você:'+' '+user1+','+' '+user2+' '+'Está afim de min.';return false;">
+    <a href="https://api.whatsapp.com/send?text="  onclick="location.href=this.href+' '+'Resultado do teste, quem está de olho em você:'+' '+user1+' '+user2+'Está interessado em você,';return false;">
         <img src="btnCo.png" class="BtnStyle">
     </a>
     <h4 id="h4">Entretenimento</h4>
@@ -217,7 +217,7 @@ function show(){
     }
     else{
 
-let choices = ['ninguém', 'Hinatinha', 'ninguém' , 'Matheus' , 'ninguém' , 'Rafa' , 'ninguém' , 'Matheus' , 'ninguém', 'Edivaldo' , 'ninguém', 'Gustavo' , 'ninguém', 'Jhessy' , 'ninguém' , 'Igor' , 'ninguém', 'Vitoria' , 'ninguém', 'kakachizin' , 'ninguém', 'Naori' , 'ninguém', 'Samuel' , 'ninguém', 'Konan' , 'ninguém', 'Ravena' , 'ninguém', 'Brollyzinho' , 'ninguém']
+let choices = ['ninguém', 'Hinatinha', 'vá trabalhar, ninguém' , 'Tenten' , 'ninguém' , 'Kaguya' , 'vá trabalhar, ninguém' , 'Madara' , 'ninguém', 'Tobi' , 'ninguém', 'Pain' , 'vá trabalhar ,ninguém', 'Jiraya' , 'ninguém' , 'Garaa' , 'ninguém', 'Guren' , 'não perca seu tempo, ninguém', 'kakachi' , 'ninguém', 'Shisui Uchiha' , 'ninguém', 'Konan' , 'não perca seu tempo, ninguém', 'Orochimaro' , 'ninguém', 'Minato' , 'não perca seu tempo, ninguém' , 'Naruto' , 'Itachi' ,'Deidara' ,'Sasuke' , 'killer bee' , 'Tsunade' , 'Sakura', 'Sabio tarado' , 'neji']
 let tamanho_array = choices.length
 let n_aleatorio = Math.floor(Math.random() * tamanho_array);
 let retorno_aleatorio = choices[n_aleatorio];
