--- a/Veja_Agora.html
+++ b/Veja_Agora.html
@@ -166,7 +166,7 @@
 <div id="tela">
     <div class="fechar" onclick="fechar()">X</div>
     
-    <a href="https://api.whatsapp.com/send?text="  onclick="location.href=this.href+' '+'Resultado do teste, quem está de olho em você:'+' '+user1+' '+user2+'Está interessado em você,';return false;">
+    <a href="https://api.whatsapp.com/send?text="  onclick="location.href=this.href+' '+'Resultado do teste, quem está de olho em você:'+' '+user1+' '+user2+'está interessado em você,';return false;">
         <img src="btnCo.png" class="BtnStyle">
     </a>
     <h4 id="h4">Entretenimento</h4>
