--- a/Veja_Agora.html
+++ b/Veja_Agora.html
@@ -217,7 +217,7 @@ function show(){
     }
     else{
 
-let choices = ['ninguém', 'Hinatinha', 'vá trabalhar, ninguém' , 'Tenten' , 'ninguém' , 'Kaguya' , 'vá trabalhar, ninguém' , 'Madara' , 'ninguém', 'Tobi' , 'ninguém', 'Pain' , 'vá trabalhar ,ninguém', 'Jiraya' , 'ninguém' , 'Garaa' , 'ninguém', 'Guren' , 'não perca seu tempo, ninguém', 'kakachi' , 'ninguém', 'Shisui Uchiha' , 'ninguém', 'Konan' , 'não perca seu tempo, ninguém', 'Orochimaro' , 'ninguém', 'Minato' , 'não perca seu tempo, ninguém' , 'Naruto' , 'Itachi' ,'Deidara' ,'Sasuke' , 'killer bee' , 'Tsunade' , 'Sakura', 'Sabio tarado' , 'neji']
+let choices = ['ninguém', 'Hinatinha', 'vá academia, ninguém' , 'Tenten' , 'ninguém' , 'Kaguya' , 'vá trabalhar, ninguém' , 'Madara' , 'ninguém', 'Tobi' , 'ninguém', 'Pain' , 'vá trabalhar ,ninguém', 'Jiraya' , 'não seja besta, ninguém' , 'Garaa' , 'ninguém', 'Guren' , 'não perca seu tempo, ninguém', 'kakachi' , 'nada é ninguém', 'Shisui Uchiha' , 'ninguém', 'Konan' , 'não perca seu tempo, ninguém', 'Orochimaro' , 'ninguém', 'Minato' , 'não perca seu tempo, ninguém' , 'Naruto' ,'ninguém quer ninguém', 'Itachi' ,'Deidara' ,'Sasuke' , 'vá academia, ninguém','killer bee' , 'Tsunade' , 'Sakura', 'Sabio tarado' , 'neji']
 let tamanho_array = choices.length
 let n_aleatorio = Math.floor(Math.random() * tamanho_array);
 let retorno_aleatorio = choices[n_aleatorio];
