--- a/Veja_Agora.html
+++ b/Veja_Agora.html
@@ -234,7 +234,7 @@ document.getElementById('tela').style.display = 'flex';
 document.getElementById("h1").innerHTML = 'Aguarde...';
 let img2 = document.getElementById('img');
 setTimeout(() => {
-    document.getElementById("h1").style.opacity = 0;
+    document.getElementById("h1").style.display="none";
     document.getElementById("h3").innerHTML = user+','+' '+ retorno_aleatorio +' '+'tem interesse em você';
     setTimeout(() => {
         document.getElementById("h3").innerHTML = 'Compartilha ou tenta denovo';
