--- a/Veja_Agora.html
+++ b/Veja_Agora.html
@@ -237,7 +237,7 @@ setTimeout(() => {
     document.getElementById("h1").style.display="none";
     document.getElementById("h3").innerHTML = user+','+' '+ retorno_aleatorio +' '+'tem interesse em você';
     setTimeout(() => {
-        document.getElementById("h3").innerHTML = 'Compartilha ou tenta denovo';
+        document.getElementById("h3").innerHTML = 'Compartilha ou arreste a tela para baixo e tente denovo';
         
         setTimeout(() => {
             document.getElementById("h3").innerHTML = 'hahahaha...';
