--- a/Veja_Agora.html
+++ b/Veja_Agora.html
@@ -93,9 +93,8 @@
         #img{
             
             width: 100%;
-            height: 300px;
-            background-size: cover;
-            border-radius: 30px;
+            height: 200px;
+           
         }   
         h3{
             font-size: 28px;
@@ -158,6 +157,7 @@
             color: white;
             font-size: 40px;
             display: none;
+            margin-bottom: 10px;
         }
     </style>
 </head>
@@ -242,7 +242,7 @@ document.getElementById('button').style.display = 'none';
 document.getElementById('tela').style.opacity = 0;
 document.getElementById('tela').style.display = 'flex';
 document.getElementById("h1").innerHTML = 'Aguarde...';
-let img2 = document.getElementById('img');
+let img2 = document.getElementById('popup');
 setTimeout(() => {
     document.getElementById("h1").style.display="none";
     document.getElementById("h3").innerHTML = user+','+' '+ retorno_aleatorio +' '+'tem interesse em você';
