--- a/Veja_Agora.html
+++ b/Veja_Agora.html
@@ -16,6 +16,7 @@
             background-image: url(https://i.pinimg.com/736x/36/76/34/367634c88c148f42fda350b12a285f16.jpg);
             background-position: center;
             background-size: cover;
+            
         }
         .subDisplay{
            
@@ -88,6 +89,7 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            border: solid 3px white;
         }
 
         #img{
@@ -101,7 +103,7 @@
             width: 100%;
             height: 100px;
             border: solid 1px black;
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: rgba(0, 0, 0, 0.8);
             color: #fff;
             text-align: center;
             padding: 5px;
